--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 # plugins
 agp = "8.7.2"
 kotlin = "2.0.21"
+ksp = "2.0.21-1.0.27"
 
 # kotlin
 coreKtx = "1.15.0"
@@ -48,7 +49,13 @@ xposed-api = { module = "de.robv.android.xposed:api", version = "82" }
 ezx-helper = { module = "com.github.kyuubiran:EzXHelper", version = "2.2.0" }
 dexkit = { module = "org.luckypray:dexkit", version = "2.0.2" }
 
+#注解扫描器
+ksp = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
+kotlinpoet-ksp = { module = "com.squareup:kotlinpoet-ksp", version = "2.0.0" }
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
