--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,7 +22,7 @@ fastkv = "2.6.0"
 fastjson2 = "2.0.53"
 glide = "4.16.0"
 base-recyclerview-helper = "4.1.6"
-
+dialogx = "0.0.49"
 
 [libraries]
 
@@ -44,6 +44,8 @@ okhttp3 = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okht
 retrofit2 = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit2" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 base-recyclerview-helper = { module = "io.github.cymchad:BaseRecyclerViewAdapterHelper4", version.ref = "base-recyclerview-helper" }
+dialogx = { module = "com.kongzue.dialogx:DialogX", version.ref = "dialogx" }
+dialogx-material-style = { module = "com.kongzue.dialogx.style:DialogXMaterialYouStyle", version.ref = "dialogx" }
 
 #xposed api
 xposed-api = { module = "de.robv.android.xposed:api", version = "82" }
