--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@
 agp = "8.7.2"
 kotlin = "2.0.21"
 ksp = "2.0.21-1.0.27"
+protobuf = "0.9.4"
 
 # kotlin
 coreKtx = "1.15.0"
@@ -17,6 +18,7 @@ appcompat = "1.7.0"
 material = "1.12.0"
 #常用库
 okhttp = "5.0.0-alpha.14"
+protobufJavalite = "3.8.0"
 retrofit2 = "2.11.0"
 fastkv = "2.6.0"
 fastjson2 = "2.0.53"
@@ -24,6 +26,9 @@ glide = "4.16.0"
 base-recyclerview-helper = "4.1.6"
 
 dialogx = "0.0.50.beta26"
+
+protobuf-java = "4.28.2"
+kotlinx-serialization-protobuf = "1.7.3"
 
 [libraries]
 
@@ -42,6 +47,7 @@ material = { group = "com.google.android.material", name = "material", version.r
 fastkv = { group = 'io.github.billywei01', name = 'fastkv', version.ref = "fastkv" }
 fastjson2 = { module = "com.alibaba.fastjson2:fastjson2", version.ref = "fastjson2" }
 okhttp3 = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
+protobuf-javalite = { module = "com.google.protobuf:protobuf-javalite", version.ref = "protobufJavalite" }
 retrofit2 = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit2" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 base-recyclerview-helper = { module = "io.github.cymchad:BaseRecyclerViewAdapterHelper4", version.ref = "base-recyclerview-helper" }
@@ -51,6 +57,10 @@ suzhelan-dialogx-iosstyle = { module = "com.github.suzhelan.DialogX:DialogXIOSSt
 suzhelan-dialogx-kongzuestyle = { module = "com.github.suzhelan.DialogX:DialogXKongzueStyle", version.ref = "dialogx" }
 suzhelan-dialogx-miuistyle = { module = "com.github.suzhelan.DialogX:DialogXMIUIStyle", version.ref = "dialogx" }
 suzhelan-dialogx-materialstyle = { module = "com.github.suzhelan.DialogX:DialogXMaterialYou", version.ref = "dialogx" }
+
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization-protobuf" }
+kotlinx-serialization-protobuf = { module = "org.jetbrains.kotlinx:kotlinx-serialization-protobuf", version.ref = "kotlinx-serialization-protobuf" }
+protobuf-java = { module = "com.google.protobuf:protobuf-java", version.ref = "protobuf-java" }
 
 #xposed api
 xposed-api = { module = "de.robv.android.xposed:api", version = "82" }
@@ -68,6 +78,6 @@ kotlin-gradle = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
-
+protobuf = { id = "com.google.protobuf", version.ref = "protobuf" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
