--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -70,6 +70,8 @@ dexkit = { module = "org.luckypray:dexkit", version = "2.0.2" }
 ksp = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
 kotlinpoet-ksp = { module = "com.squareup:kotlinpoet-ksp", version = "2.0.0" }
 
+byte-buddy-android = { module = "net.bytebuddy:byte-buddy-android", version = "1.15.10" }
+
 #自定义gradle插件
 android-tools = { module = "com.android.tools.build:gradle", version.ref = "agp" }
 kotlin-gradle = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
