--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,22 +5,35 @@
     <!--网络请求权限-->
     <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:name=".app.FixApplication"
         android:icon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".app.FixApplication"
         android:theme="@style/Theme.TimTool"
         tools:targetApi="31">
+
         <activity
             android:name=".app.activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="de.robv.android.xposed.category.MODULE_SETTINGS" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity-alias
+            android:name=".app.activity.HideMainActivity"
+            android:exported="true"
+            android:targetActivity=".app.activity.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="de.robv.android.xposed.category.MODULE_SETTINGS" />
+            </intent-filter>
+        </activity-alias>
+
         <!-- Xposed模块配置 -->
         <meta-data
             android:name="xposedmodule"
