--- a/libs/xp-helper/build.gradle
+++ b/libs/xp-helper/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     alias(libs.plugins.android.library)
+    alias(libs.plugins.kotlin.android)
 }
 
 android {
@@ -22,9 +23,16 @@ android {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
+    kotlinOptions {
+        jvmTarget = '11'
+    }
 }
 
 dependencies {
+    implementation libs.androidx.core.ktx
     compileOnly(libs.xposed.api)
     compileOnly(libs.androidx.appcompat)
+    implementation(libs.dexkit)
+    implementation(libs.fastkv)
+    implementation(libs.fastjson2)
 }
