--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,9 @@
 [versions]
 # plugins
-agp = "8.6.1"
-kotlin = "2.1.0"
-ksp = "2.1.10-1.0.29"
-protobuf = "0.9.4"
+agp = "9.0.0-alpha05"
+kotlin = "2.2.20"
+ksp = "2.2.20-2.0.3"
+protobuf = "0.9.5"
 
 # kotlin
 coreKtx = "1.15.0"
@@ -28,7 +28,7 @@ base-recyclerview-helper = "4.1.6"
 dialogx = "0.0.50.beta32"
 
 protobuf-java = "4.29.3"
-kotlinx-serialization-protobuf = "1.8.0"
+kotlinx-serialization = "1.8.0"
 xphelper = "2.4"
 
 [libraries]
@@ -60,8 +60,8 @@ suzhelan-dialogx-kongzuestyle = { module = "com.github.suzhelan.DialogX:DialogXK
 suzhelan-dialogx-miuistyle = { module = "com.github.suzhelan.DialogX:DialogXMIUIStyle", version.ref = "dialogx" }
 suzhelan-dialogx-materialstyle = { module = "com.github.suzhelan.DialogX:DialogXMaterialYou", version.ref = "dialogx" }
 
-kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization-protobuf" }
-kotlinx-serialization-protobuf = { module = "org.jetbrains.kotlinx:kotlinx-serialization-protobuf", version.ref = "kotlinx-serialization-protobuf" }
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
+kotlinx-serialization-protobuf = { module = "org.jetbrains.kotlinx:kotlinx-serialization-protobuf", version.ref = "kotlinx-serialization" }
 protobuf-java = { module = "com.google.protobuf:protobuf-java", version.ref = "protobuf-java" }
 
 #xposed api
@@ -71,7 +71,7 @@ dexkit = { module = "org.luckypray:dexkit", version = "2.0.2" }
 
 #注解扫描器
 ksp = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
-kotlinpoet-ksp = { module = "com.squareup:kotlinpoet-ksp", version = "2.0.0" }
+kotlinpoet-ksp = { module = "com.squareup:kotlinpoet-ksp", version = "2.2.0" }
 
 byte-buddy-android = { module = "net.bytebuddy:byte-buddy-android", version = "1.15.10" }
 
@@ -81,7 +81,7 @@ kotlin-gradle = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
-kotlin-android = { id = "org.jetbrains.kotlin.android", version = "2.1.10" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 protobuf = { id = "com.google.protobuf", version.ref = "protobuf" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
